--- a/package.json
+++ b/package.json
@@ -3,19 +3,31 @@
   "version": "1.0.0",
   "homepage": "https://www.escode.sk",
   "private": true,
-  "dependencies": {
-    "cra-template-pwa-typescript": "2.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build --cname www.escode.sk"
+  },
+  "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "classnames": "^2.5.1",
+    "cra-template-pwa-typescript": "2.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.3",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "gh-pages": "^6.2.0"
   },
   "eslintConfig": {
     "extends": [
@@ -34,14 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.3",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "gh-pages": "^6.2.0"
   }
 }
